--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,15 +1,20 @@
 parameters:
   thrift.class: Overblog\ThriftBundle\Client\ThriftClient
   thrift.compile_warmer.class: Overblog\ThriftBundle\CacheWarmer\ThriftCompileCacheWarmer
+  thrift.factory: Overblog\ThriftBundle\Factory\ThriftFactory
   clients: %thrift.config.clients%
 
 services:
   thrift:
     class: %thrift.class%
-    arguments: [%clients%]
+    arguments: [@thrift.factory, %clients%]
 
   thrift.compile_warmer:
     class: %thrift.compile_warmer.class%
     arguments: [@service_container]
     tags:
       - { name: "kernel.cache_warmer", priority: "10" }
+
+  thrift.factory:
+    class: %thrift.factory%
+    arguments: [%kernel.cache_dir%, %kernel.debug%]
