--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "ebuzzing/thrift": "0.9.x"
+        "ebuzzing/thrift": "0.9.x@dev"
     },
     "target-dir": "Overblog/ThriftBundle",
     "autoload": {
