--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "ebuzzing/thrift": "0.9.1.x-dev"
+        "apache/thrift": ">=0.9.1"
     },
     "target-dir": "Overblog/ThriftBundle",
     "autoload": {
