--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "apache/thrift": ">=0.9.1"
+        "apache/thrift": ">=0.9.1",
+        "symfony/symfony": ">=2.4.0"
     },
     "target-dir": "Overblog/ThriftBundle",
     "autoload": {
