--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -21,3 +21,8 @@ services:
       - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest, priority: 255 }
       - { name: kernel.event_listener, event: console.command, method: onConsoleCommand, priority: 255 }
 
+  thrift.routing.loader:
+    class: Overblog\ThriftBundle\Routing\ThriftRoutingLoader
+    arguments: [%thrift.config.servers%]
+    tags:
+      - { name: routing.loader, priority: 255 }
