Fix deprecated uses for SF 2.8

--- a/Resources/config/routing.yml
+++ b/Resources/config/routing.yml
@@ -1,5 +1,4 @@
 thrift_server:
-    pattern:  /{extensionName}
+    path:  /{extensionName}
     defaults: { _controller: OverblogThriftBundle:Thrift:server }
-    requirements:
-        _method: POST
+    methods: [POST]
