--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "require": {
         "php": ">=5.3.0",
         "apache/thrift": ">=0.9.1",
-        "symfony/symfony": ">=2.4.0"
+        "symfony/symfony": "~2.4|~3.0"
     },
     "target-dir": "Overblog/ThriftBundle",
     "autoload": {
