Changed routing.yaml in order to use thrift routing loader

--- a/Resources/config/routing.yml
+++ b/Resources/config/routing.yml
@@ -1,4 +1,3 @@
 thrift_server:
-    path:  /{extensionName}
-    defaults: { _controller: OverblogThriftBundle:Thrift:server }
-    methods: [POST]
+    resource: .
+    type: thrift
