--- a/composer.json
+++ b/composer.json
@@ -13,11 +13,12 @@
     "require": {
         "php": ">=5.3.0",
         "apache/thrift": ">=0.9.1",
-        "symfony/symfony": "~2.4|~3.0"
+        "symfony/symfony": "~2.3|~3.0"
     },
-    "target-dir": "Overblog/ThriftBundle",
     "autoload": {
-        "psr-0": {"Overblog\\ThriftBundle": ""}
-    },
-    "minimum-stability": "dev"
+        "psr-4": {"Overblog\\ThriftBundle\\": ""},
+        "exclude-from-classmap": [
+            "/Tests/"
+        ]
+    }
 }
