Cleanup phing build

--- a/composer.json
+++ b/composer.json
@@ -20,5 +20,8 @@
         "exclude-from-classmap": [
             "/Tests/"
         ]
+    },
+    "require-dev": {
+        "phing/phing": "2.*"
     }
 }
