--- a/composer.json
+++ b/composer.json
@@ -10,17 +10,19 @@
           "homepage": "http://www.over-blog.com"
         }
     ],
-    "require": {
-        "php": ">=5.3.0",
-        "apache/thrift": ">=0.9.1",
-        "symfony/symfony": "~2.3|~3.0"
-    },
     "autoload": {
         "psr-4": {"Overblog\\ThriftBundle\\": ""},
         "exclude-from-classmap": [
             "/Tests/"
         ]
     },
-    "require-dev": {
-    }
+    "config" : {
+        "sort-packages": true
+    },
+    "require": {
+        "php": "^5.3.6|~7.0",
+        "apache/thrift": ">=0.9.1",
+        "symfony/symfony": "~2.3|~3.0"
+    },
+    "require-dev": {}
 }
