--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,13 @@
     "require": {
         "php": "^5.4|~7.0",
         "apache/thrift": ">=0.9.1",
-        "symfony/process": "^2.3|~3.0",
-        "symfony/symfony": "~2.3|~3.0"
+        "symfony/framework-bundle": "^2.3|^3.0",
+        "symfony/process": "^2.3|^3.0"
+
     },
-    "require-dev": {}
+    "require-dev": {
+        "phpunit/phpunit": "^4.1|^5.1",
+        "symfony/browser-kit": "^2.3|^3.0",
+        "symfony/phpunit-bridge": "^2.3|^3.0"
+    }
 }
