--- a/.travis.yml
+++ b/.travis.yml
@@ -36,11 +36,10 @@ allow_failures:
 cache:
     directories:
         - $HOME/.composer/cache
+        - $HOME/thrift
 
 before_install:
-    - travis_retry sudo apt-get update
-    - travis_retry sudo apt-get install automake bison flex g++ git libboost1.55-all-dev libevent-dev libssl-dev libtool make pkg-config openjdk-7-jdk php5-dev php5-cli phpunit
-    - cd /tmp && (curl http://archive.apache.org/dist/thrift/${THRIFT_VERSION}/thrift-${THRIFT_VERSION}.tar.gz | tar zx) && cd thrift-${THRIFT_VERSION}/ && ./configure --without-qt4 --without-c_glib --without-csharp --without-java --without-erlang --without-python --without-perl --with-php --with-php_extension --without-ruby --without-haskell --without-go --without-d --without-cpp && make && sudo make install && cd ${TRAVIS_BUILD_DIR}
+    - /bin/bash $TRAVIS_BUILD_DIR/.travis/bin/install-thrift-compiler
     - if [[ "$TRAVIS_PHP_VERSION" != "5.6" && "$TRAVIS_PHP_VERSION" != "hhvm" ]]; then phpenv config-rm xdebug.ini || true; fi
     - composer selfupdate
     - if [ "$SYMFONY_VERSION" != "" ]; then composer require "symfony/symfony:${SYMFONY_VERSION}" --no-update; fi;
