--- a/composer.json
+++ b/composer.json
@@ -24,11 +24,17 @@
         "apache/thrift": ">=0.9.1",
         "symfony/framework-bundle": "^2.3|^3.0",
         "symfony/process": "^2.3|^3.0"
-
     },
     "require-dev": {
         "phpunit/phpunit": "^4.1|^5.1",
+        "ocramius/proxy-manager": "^1.0",
         "symfony/browser-kit": "^2.3|^3.0",
+        "symfony/cache": "^3.1",
         "symfony/phpunit-bridge": "^2.3|^3.0"
+
+    },
+    "suggest": {
+        "ocramius/proxy-manager": "Required if using client cache.",
+        "symfony/cache": "Required if using client cache."
     }
 }
