--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "php": "^5.4|~7.0",
         "apache/thrift": ">=0.9.1",
         "symfony/framework-bundle": "^2.3|^3.0",
+        "symfony/options-resolver": "^2.3|^3.0",
         "symfony/process": "^2.3|^3.0"
     },
     "require-dev": {
