--- a/.travis.yml
+++ b/.travis.yml
@@ -44,11 +44,9 @@ before_install:
     - composer selfupdate
     - if [ "$SYMFONY_VERSION" != "" ]; then composer require "symfony/symfony:${SYMFONY_VERSION}" --no-update; fi;
     - composer require "apache/thrift:${THRIFT_VERSION}"
+    - if [ "$TRAVIS_PHP_VERSION" != "5.4" ]; then composer require "symfony/cache:^3.1" "ocramius/proxy-manager:^1.0"; fi
 
 install:
     - composer update --prefer-dist --no-interaction
 
 script: if [ "$TRAVIS_PHP_VERSION" == "5.6" ]; then phpunit -d xdebug.max_nesting_level=1000 --debug --coverage-clover=coverage.clover; else phpunit --debug; fi
-
-#after_script:
-#    - if [ "$TRAVIS_PHP_VERSION" == "5.6" ]; then wget https://scrutinizer-ci.com/ocular.phar && php ocular.phar code-coverage:upload --format=php-clover coverage.clover; fi
