--- a/.travis.yml
+++ b/.travis.yml
@@ -44,7 +44,7 @@ before_install:
     - composer selfupdate
     - if [ "$SYMFONY_VERSION" != "" ]; then composer require "symfony/symfony:${SYMFONY_VERSION}" --no-update; fi;
     - composer require "apache/thrift:${THRIFT_VERSION}"
-    - if [ "$TRAVIS_PHP_VERSION" != "5.4" ]; then composer require "symfony/cache:^3.1" "ocramius/proxy-manager:^1.0"; fi
+    - if [ "$TRAVIS_PHP_VERSION" != "5.4" ]; then composer require "symfony/cache:^3.1" "ocramius/proxy-manager:^1.0" "guzzlehttp/promises:^1.1"; fi
 
 install:
     - composer update --prefer-dist --no-interaction
