--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -7,22 +7,22 @@ parameters:
 
 services:
   thrift.compile_warmer:
-    class: %thrift.compile_warmer.class%
-    arguments: [%kernel.cache_dir%, %kernel.root_dir%, %thrift.config.compiler.path%, %thrift.config.services%]
+    class: '%thrift.compile_warmer.class%'
+    arguments: ['%kernel.cache_dir%', '%kernel.root_dir%', '%thrift.config.compiler.path%', '%thrift.config.services%']
 
   thrift.factory:
-    class: %thrift.factory.class%
-    arguments: [%thrift.config.services%]
+    class: '%thrift.factory.class%'
+    arguments: ['%thrift.config.services%']
 
   thrift.classloader.listener:
-    arguments: [%kernel.cache_dir%]
-    class: %thrift.classloader.listener.class%
+    arguments: ['%kernel.cache_dir%']
+    class: '%thrift.classloader.listener.class%'
     tags:
       - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest, priority: 255 }
       - { name: kernel.event_listener, event: console.command, method: onConsoleCommand, priority: 255 }
 
   thrift.routing.loader:
     class: Overblog\ThriftBundle\Routing\ThriftRoutingLoader
-    arguments: [%thrift.config.servers%]
+    arguments: ['%thrift.config.servers%']
     tags:
       - { name: routing.loader, priority: 255 }
