--- a/composer.json
+++ b/composer.json
@@ -23,10 +23,13 @@
     "require": {
         "php": "^5.3.6|~7.0",
         "apache/thrift": ">=0.9.1",
-        "symfony/symfony": "~2.3|~3.0"
+        "symfony/class-loader": "~2.3||~3.0",
+        "symfony/dependency-injection": "~2.3||~3.0||^4.0",
+        "symfony/framework-bundle": "~2.3||~3.0||^4.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^4.1 || ^5.5"
+        "phpunit/phpunit": "^4.1 || ^5.5",
+        "symfony/symfony": "~2.3||~3.0||^4.0"
     },
     "extra": {
         "branch-alias": {
